--- a/place.project.json
+++ b/place.project.json
@@ -12,6 +12,11 @@
 			"TestEZ": {
 				"$path": "modules/TestEZ"
 			}
+		},
+		"ServerScriptService": {
+			"$className": "ServerScriptService",
+			"$ignoreUnknownInstances": true,
+			"$path": "tests"
 		}
 	}
 }
