--- a/default.project.json
+++ b/default.project.json
@@ -1,22 +1,6 @@
 {
-	"name": "CatmullRomSpline tests",
+	"name": "CatmullRomSpline",
 	"tree": {
-		"$className": "DataModel",
-		"ReplicatedStorage": {
-			"$className": "ReplicatedStorage",
-			"$ignoreUnknownInstances": true,
-			"$path": "src",
-			"t": {
-				"$path": "modules/t"
-			},
-			"TestEZ": {
-				"$path": "modules/TestEZ"
-			}
-		},
-		"ServerScriptService": {
-			"$className": "ServerScriptService",
-			"$ignoreUnknownInstances": true,
-			"$path": "tests"
-		}
+		"$path": "src"
 	}
 }
