Publish v1.0.0-rc1 to Wally

--- a/wally.toml
+++ b/wally.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ecurtiss/catrom"
-version = "0.6.0"
+version = "1.0.0-rc1"
 realm = "shared"
 registry = "https://github.com/upliftgames/wally-index"
-exclude = ["docs", "literature", "test-bench.rbxl"]
+exclude = ["build", "img", "literature", "test"]
